--- a/src/components/SimplePopper/SimplePopper.css
+++ b/src/components/SimplePopper/SimplePopper.css
@@ -1,7 +1,8 @@
-@import 'https://fonts.googleapis.com/css?family=Merriweather';
+@import "https://fonts.googleapis.com/css?family=Merriweather";
 .popover-component {
   margin: 0;
-  width: 25%; }
+  width: 25%;
+}
 
 .paper {
   width: 100%;
@@ -12,6 +13,7 @@
   text-align: center;
   background: white;
   box-shadow: 2px 2px 2px grey;
-  font-family: "Merriweather", serif; }
+  font-family: "Merriweather", serif;
+}
 
 /*# sourceMappingURL=SimplePopper.css.map */
