--- a/src/components/Utility/BaseForm/BaseForm.sass
+++ b/src/components/Utility/BaseForm/BaseForm.sass
@@ -9,8 +9,15 @@
   width: 60%
   height: 280px
   margin: 0 auto
-
+.calculate-button
+  width: 33%
+.buttons
+  display: flex
+  justify-content: space-between
+  width: 100%
 @media (max-width: 400px)
   .fields-container
     width: 90%
+  .calculate-button
+    width: 45%
 
