--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 .App {
+  height: 100%;
+  min-height: 100vh;
+  background-image: url("images/Background.jpg");
+  background-position: center;
+  background-size: cover;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
