--- a/src/components/Utility/BaseForm/BaseForm.sass
+++ b/src/components/Utility/BaseForm/BaseForm.sass
@@ -1,7 +1,17 @@
 .calc-container
-  height: 350px
-  margin-top: 20px
-  border-bottom: 2px dotted rgba(0,0,0,.05)
+  display: block
+  box-sizing: border-box
+  padding-bottom: 15px
+  padding-top: 15px
+  margin-top: 15px
+  margin-bottom: 15px
+  border:
+    bottom: 2px dotted rgba(0,0,0,.05)
+    top: 2px dotted rgba(0,0,0,.05)
+h4
+  margin: 0 0 10px 0
+.hidden
+  display: none
 .fields-container
   display: flex
   flex-direction: column
@@ -20,4 +30,21 @@
     width: 90%
   .calculate-button
     width: 45%
+//animatiomn
+.slide-enter
+  opacity: 0
+  transform: scale(0.5)
+
+.slide-enter-active
+  opacity: 1
+  transform: translateX(0)
+  transition: all 300ms
+
+.slide-exit
+  opacity: 1
+
+.slide-exit-active
+  opacity: 0
+  transform: scale(0.8)
+  transition: all 1000ms
 
