header buttons now lined up with other blocks

--- a/src/components/Utility/UtilityPage/UtilityPage.sass
+++ b/src/components/Utility/UtilityPage/UtilityPage.sass
@@ -47,3 +47,9 @@
   padding: 10px
   border-radius: 5px
 
+.header-buttons
+  width: 60%!important
+  margin: 0 auto
+@media (max-width: 500px)
+  .header-buttons
+    width: 90%!important
