data rate is now in header

--- a/src/components/ControlButtons/ControlButtons.css
+++ b/src/components/ControlButtons/ControlButtons.css
@@ -2,9 +2,11 @@
   display: flex;
   width: 60%;
   justify-content: space-evenly;
-  margin: 10px auto; }
+  margin: 10px auto;
+}
 
 .backward-arrow {
-  transform: rotate(180deg) !important; }
+  transform: rotate(180deg) !important;
+}
 
 /*# sourceMappingURL=ControlButtons.css.map */
